manifests/personal/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal
  labels:
    name: personal
